# smav

./: pyproject.toml
src/: coordinates.json  drone.py  main.py  router.py  schemas.py
src/templates/: index.html
