[tool.poetry]
name = "copter"
version = "0.1.0"
description = ""
authors = ["jekxkan <smirnova.eyu@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dronekit = "^2.9.2"
flask = "^3.1.0"
pydantic = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
